--- a/pom.xml
+++ b/pom.xml
@@ -63,12 +63,37 @@
                     <artifactId>jjwt</artifactId>
                     <version>0.9.1</version>
                 </dependency>
-	 <dependency>
-	  <groupId>jakarta.validation</groupId>
-	  <artifactId>jakarta.validation-api</artifactId>
-	  <version>2.0.1</version>
-	  <type>jar</type>
-	 </dependency>
+                 <dependency>
+                  <groupId>jakarta.validation</groupId>
+                  <artifactId>jakarta.validation-api</artifactId>
+                  <version>2.0.1</version>
+                  <type>jar</type>
+                 </dependency>
+                 
+		<dependency>
+			<groupId>org.thymeleaf</groupId>
+			<artifactId>thymeleaf-spring4</artifactId>
+			<version>2.1.5.RELEASE</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.thymeleaf</groupId>
+			<artifactId>thymeleaf</artifactId>
+			<version>2.1.5.RELEASE</version>
+		</dependency>
+
+		<dependency>
+			<groupId>nz.net.ultraq.thymeleaf</groupId>
+			<artifactId>thymeleaf-layout-dialect</artifactId>
+			<version>2.1.2</version>
+		</dependency>
+                <dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
+                 
+                 
+                 
 	</dependencies>
 
 	<build>
