--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,15 @@ spring.servlet.multipart.max-request-size=1MB
 # security
 jwt.secret = secret
 jwt.expiration = 36000
+
+#Sericio Mail Contacto    hplowtinzmlyupyd
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=portfolioegjp6741@gmail.com
+spring.mail.password=hplowtinzmlyupyd
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
