--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,12 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/portfolio?useSSL=false&serverTimezone=UTC
-spring.datasource.username=admin
-spring.datasource.password=admin
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-
+#spring.datasource.url=jdbc:mysql://localhost:3306/portfolio?useSSL=false&serverTimezone=UTC
+#spring.datasource.username=admin
+#spring.datasource.password=admin
+spring.datasource.url=jdbc:mysql://acw2033ndw0at1t7.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/umh16n0w07h4r2lo?useSSL=false
+spring.datasource.username=i3oknzmqz05wyheg
+spring.datasource.password=lqiso2udq5jz5wmg
+spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jackson.time-zone = America/Argentina/Buenos_Aires
 spring.jackson.locale = es_AR
 
@@ -18,10 +21,15 @@ jwt.expiration = 36000
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=portfolioegjp6741@gmail.com
-spring.mail.password=hplowtinzmlyupyd
+spring.mail.password=dddctdasgowegaih
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.connectiontimeout=5000
 spring.mail.properties.mail.smtp.timeout=5000
 spring.mail.properties.mail.smtp.writetimeout=5000
+
+server.port=${PORT:8080}
+
+
+#mysql://i3oknzmqz05wyheg:lqiso2udq5jz5wmg@acw2033ndw0at1t7.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/umh16n0w07h4r2lo
