--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.jpa.hibernate.ddl-auto=update
 #spring.datasource.url=jdbc:mysql://localhost:3306/portfolio?useSSL=false&serverTimezone=UTC
 #spring.datasource.username=admin
 #spring.datasource.password=admin
-spring.datasource.url=jdbc:mysql://i3oknzmqz05wyheg:lqiso2udq5jz5wmg@acw2033ndw0at1t7.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/umh16n0w07h4r2lo
-spring.datasource.username=i3oknzmqz05wyheg
-spring.datasource.password=lqiso2udq5jz5wmg
+spring.datasource.url=jdbc:mysql://brv4ipal5bn3hwosffuy-mysql.services.clever-cloud.com:3306/brv4ipal5bn3hwosffuy
+spring.datasource.username=u56opkchjwdfp0xk
+spring.datasource.password=EWKZsrFmZnNDrfyO7Vsf
 spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
 #spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jackson.time-zone = America/Argentina/Buenos_Aires
